--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
   <div class="overlay">
-    <h1>Welcome to the Rain Inn</h1>
+    <h1>Welcome to the Inn</h1>
     <p>You stumble upon a warm glow in the middle of a downpour. Will you...</p>
     <a href="outside.html" class="button">Stay Outside 🌧️</a>
     <a href="inside.html" class="button">Step Inside 🕯️</a>
