--- a/inside.html
+++ b/inside.html
@@ -6,97 +6,52 @@
   <style>
     body {
       margin: 0;
-      padding: 2rem;
-      font-family: 'Georgia', serif;
-      background-color: #2b2b2b;
-      color: #f0e6d2;
-      background-image: url('your-cozy-interior.jpg'); /* Replace with your image */
+      background: url('images/inside.png') no-repeat center center fixed;
       background-size: cover;
-      background-position: center;
-      backdrop-filter: blur(2px);
+      font-family: 'Georgia', serif;
+      color: #f2e9e4;
     }
 
-    .overlay {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 2rem;
-      border-radius: 1rem;
-      max-width: 800px;
-      margin: auto;
+    .nav {
+      position: absolute;
+      top: 1rem;
+      left: 1rem;
+      background: rgba(0,0,0,0.6);
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
     }
 
-    h1, h2 {
-      color: #ffdca8;
-    }
-
-    section {
-      margin-bottom: 2rem;
-      padding-bottom: 1rem;
-      border-bottom: 1px dashed #665d4e;
-    }
-
-    .fireplace-feed p,
-    .guestbook p,
-    .library li,
-    .blog-entry {
-      margin: 0.5rem 0;
-    }
-
-    nav {
-      margin-top: 2rem;
-    }
-
-    nav a {
-      color: #a4c2f4;
-      text-decoration: none;
+    .nav a {
+      color: #f2e9e4;
       margin-right: 1rem;
+      text-decoration: none;
+      font-size: 1rem;
     }
 
-    nav a:hover {
-      text-decoration: underline;
+    .welcome {
+      position: absolute;
+      bottom: 2rem;
+      left: 2rem;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 1rem;
+      border-radius: 1rem;
+      max-width: 300px;
     }
   </style>
 </head>
 <body>
-  <div class="overlay">
-    <h1>Welcome Inside</h1>
-    <p>Dry off by the fire. Pour some tea. The rain will wait.</p>
 
-    <section class="fireplace-feed">
-      <h2>🔥 Fireplace Feed</h2>
-      <p>🪵 Lit the fire at 4pm. Smells like cedar.</p>
-      <p>📻 Playing: Rainy Jazz Vibes on loop.</p>
-      <p>🍞 Made cinnamon toast. Perfectly golden.</p>
-    </section>
-
-    <section class="library">
-      <h2>📚 The Library</h2>
-      <ul>
-        <li><strong>“Braiding Sweetgrass”</strong> by Robin Wall Kimmerer</li>
-        <li><strong>“The Left Hand of Darkness”</strong> by Ursula K. Le Guin</li>
-        <li><strong>“The Art of Stillness”</strong> by Pico Iyer</li>
-      </ul>
-    </section>
-
-    <section class="blog">
-      <h2>📝 Journal</h2>
-      <div class="blog-entry">
-        <h3>May 24, 2025 — The Beginning</h3>
-        <p>I listened to the rain until I forgot time. It reminded me how rest doesn’t have to be earned. it just is.</p>
-      </div>
-    </section>
-
-    <section class="guestbook">
-      <h2>💌 Guestbook</h2>
-      <p><em>“Love the quiet in here. — Rowan”</em></p>
-      <p><em>“Thanks for the tea and thoughts. — Sky”</em></p>
-      <!-- To make this interactive later, you could use Netlify Forms or a simple static form -->
-    </section>
-
-    <nav>
-      <a href="index.html">🏠 Back to Main Street</a>
-      <a href="outside.html">🌧️ Step Outside</a>
-    </nav>
+  <div class="nav">
+    <a href="index.html">Home</a>
+    <a href="outside.html">Outside</a>
+    <a href="blog.html">Blog</a>
+    <a href="guestbook.html">Guestbook</a>
+    <a href="about.html">About</a>
   </div>
+
+  <div class="welcome">
+    <p>Welcome inside. The fire is crackling. The rain whispers outside. Take a seat and explore.</p>
+  </div>
+
 </body>
 </html>
-
