--- a/inside.html
+++ b/inside.html
@@ -16,7 +16,7 @@
       position: absolute;
       top: 1rem;
       left: 1rem;
-      background: rgba(0,0,0,0.6);
+      background: rgba(0, 0, 0, 0.6);
       padding: 0.5rem 1rem;
       border-radius: 0.5rem;
     }
@@ -36,22 +36,113 @@
       padding: 1rem;
       border-radius: 1rem;
       max-width: 300px;
+      line-height: 1.6;
+    }
+
+    /* 📬 You've Got Mail Button */
+    .mail-button {
+      position: absolute;
+      top: 380px; /* above the fireplace */
+      left: 235px;
+      background: #fff8f0;
+      border: 2px solid #8b5e3c;
+      border-radius: 12px;
+      padding: 0.6rem 1.1rem;
+      font-size: 1.5rem;
+      color: #4b2e2e;
+      cursor: pointer;
+      font-family: 'Georgia', serif;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+      transition: background 0.3s, transform 0.2s;
+      animation: floaty 3s ease-in-out infinite;
+      z-index: 999;
+    }
+
+    .mail-button:hover {
+      background: #fff3e0;
+      transform: translateY(-3px);
+    }
+
+    /* ✨ Modal (Chatbox) */
+    .modal {
+      display: none;
+      position: absolute;
+      top: 460px;
+      left: 140px;
+      width: 420px;
+      height: 480px;
+      background: rgba(255, 255, 255, 0.94);
+      border: 2px solid #8b5e3c;
+      border-radius: 1rem;
+      padding: 0.5rem;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      z-index: 1000;
+      overflow: hidden;
+    }
+
+    .modal iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
+    @keyframes floaty {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-4px); }
+      100% { transform: translateY(0); }
+    }
+
+    @media (max-width: 768px) {
+      .modal {
+        width: 90%;
+        height: 60%;
+        top: 45%;
+        left: 5%;
+      }
+
+      .mail-button {
+        top: 65%;
+        left: 45%;
+      }
+
+      .welcome {
+        max-width: 90%;
+        left: 1rem;
+        right: 1rem;
+      }
     }
   </style>
 </head>
 <body>
 
+  <!-- 🔗 Navigation -->
   <div class="nav">
     <a href="index.html">Home</a>
     <a href="outside.html">Outside</a>
     <a href="blog.html">Blog</a>
-    <a href="guestbook.html">Guestbook</a>
     <a href="about.html">About</a>
   </div>
 
+  <!-- 📝 Welcome Message -->
   <div class="welcome">
     <p>Welcome inside. The fire is crackling. The rain whispers outside. Take a seat and explore.</p>
   </div>
+
+  <!-- 📬 Mail Button -->
+  <button class="mail-button" onclick="toggleModal()">💌</button>
+
+  <!-- 💌 Modal Chat -->
+  <div class="modal" id="fireModal">
+    <iframe src="https://www3.cbox.ws/box/?boxid=3546852&boxtag=bv7ha1" allowtransparency="yes" allow="autoplay" scrolling="auto"></iframe>
+  </div>
+
+  <!-- 🧠 JS Toggle -->
+  <script>
+    function toggleModal() {
+      const modal = document.getElementById('fireModal');
+      modal.style.display = (modal.style.display === 'block') ? 'none' : 'block';
+    }
+  </script>
 
 </body>
 </html>
