--- a/outside.html
+++ b/outside.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Outside | Rain Inn</title>
   <style>
     body {
@@ -16,16 +17,9 @@
       background-position: center;
       position: relative;
       color: #f0e6d2;
-    }
-
-    .text-box {
-      position: absolute;
-      bottom: 2rem;
-      left: 2rem;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 1rem 1.5rem;
-      border-radius: 0.75rem;
-      max-width: 320px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
     }
 
     nav {
@@ -34,6 +28,7 @@
       left: 1rem;
       display: flex;
       gap: 1rem;
+      flex-wrap: wrap;
     }
 
     nav a {
@@ -44,10 +39,20 @@
       color: #fff;
       font-weight: bold;
       font-size: 0.9rem;
+      white-space: nowrap;
     }
 
     nav a:hover {
       background: rgba(123, 112, 95, 0.9);
+    }
+
+    .text-box {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 1rem 1.5rem;
+      border-radius: 0.75rem;
+      margin: 1rem;
+      max-width: 90%;
+      align-self: flex-start;
     }
 
     .rain-toggle {
@@ -64,6 +69,36 @@
       font-family: 'Georgia', serif;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
       z-index: 999;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        font-size: 1rem;
+      }
+
+      .text-box {
+        margin: 1rem;
+        padding: 0.75rem 1rem;
+        max-width: 100%;
+      }
+
+      nav {
+        top: 0.5rem;
+        left: 0.5rem;
+        gap: 0.5rem;
+      }
+
+      nav a {
+        font-size: 0.8rem;
+        padding: 0.4rem 0.8rem;
+      }
+
+      .rain-toggle {
+        bottom: 0.5rem;
+        right: 0.5rem;
+        font-size: 0.9rem;
+        padding: 0.4rem 0.8rem;
+      }
     }
   </style>
 </head>
