--- a/outside.html
+++ b/outside.html
@@ -5,27 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Outside | Rain Inn</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       background: #000;
-      height: 100vh;
-      overflow: hidden;
       font-family: 'Georgia', serif;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       background-image: url('images/porch.png');
       background-size: cover;
       background-position: center;
-      position: relative;
+      background-repeat: no-repeat;
       color: #f0e6d2;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
+      justify-content: space-between;
+      padding: 1rem;
     }
 
     nav {
-      position: absolute;
-      top: 1rem;
-      left: 1rem;
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
@@ -33,13 +34,12 @@
 
     nav a {
       text-decoration: none;
-      background: rgba(102, 93, 78, 0.8);
-      padding: 0.5rem 1rem;
+      background: rgba(102, 93, 78, 0.85);
+      padding: 0.6rem 1rem;
       border-radius: 0.5rem;
       color: #fff;
       font-weight: bold;
-      font-size: 0.9rem;
-      white-space: nowrap;
+      font-size: 1rem;
     }
 
     nav a:hover {
@@ -50,54 +50,46 @@
       background: rgba(0, 0, 0, 0.6);
       padding: 1rem 1.5rem;
       border-radius: 0.75rem;
-      margin: 1rem;
-      max-width: 90%;
-      align-self: flex-start;
+      max-width: 100%;
+      margin-top: 2rem;
+      font-size: 1.1rem;
     }
 
     .rain-toggle {
-      position: absolute;
-      bottom: 1rem;
-      right: 1rem;
       background: #fff8f0;
       border: 2px solid #8b5e3c;
       border-radius: 12px;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
+      padding: 0.75rem 1.2rem;
+      font-size: 1.1rem;
       color: #4b2e2e;
       cursor: pointer;
       font-family: 'Georgia', serif;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-      z-index: 999;
+      align-self: flex-end;
+      margin-top: 1rem;
     }
 
     @media (max-width: 600px) {
       body {
         font-size: 1rem;
+        padding: 1rem 1rem 2rem;
       }
 
       .text-box {
-        margin: 1rem;
-        padding: 0.75rem 1rem;
-        max-width: 100%;
-      }
-
-      nav {
-        top: 0.5rem;
-        left: 0.5rem;
-        gap: 0.5rem;
+        font-size: 1rem;
+        padding: 1rem;
       }
 
       nav a {
-        font-size: 0.8rem;
-        padding: 0.4rem 0.8rem;
+        font-size: 0.9rem;
+        padding: 0.5rem 0.9rem;
       }
 
       .rain-toggle {
-        bottom: 0.5rem;
-        right: 0.5rem;
-        font-size: 0.9rem;
-        padding: 0.4rem 0.8rem;
+        font-size: 1rem;
+        padding: 0.6rem 1rem;
+        width: 100%;
+        align-self: center;
       }
     }
   </style>
@@ -113,12 +105,12 @@
     <p>The porch is dry, the rain is soft. The fire crackles nearby. You’ve got time...</p>
   </div>
 
+  <button class="rain-toggle" onclick="toggleRain()">⏸️ Pause Rain</button>
+
   <audio id="rainAudio" autoplay loop>
     <source src="audio/rain.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
-
-  <button class="rain-toggle" onclick="toggleRain()">⏸️ Pause Rain</button>
 
   <script>
     const rainAudio = document.getElementById("rainAudio");
